# Research-Agent

./: README.md  configuration.py  graph.py  langgraph.json  pyproject.toml  requirements.txt  server.py  tools_and_schemas.py
backend/: pyproject.toml  test.py
backend/src/agent/: configuration.py  graph.py  state.py
frontend/: package-lock.json  package.json  streamlit_app.py  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  ChatSidebar.tsx  ResearchSteps.tsx  WelcomeScreen.tsx
frontend/src/components/landing/: DragonWingsWatermark.tsx
frontend/src/hooks/: useChat.ts  useTypewriter.ts
frontend/src/pages/: Chat.tsx  Landing.tsx
