[project]
name = "research-agent"
version = "0.0.1"
description = "My research agent"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.2.6",
    "langchain>=0.3.19",
    "langchain-google-genai",
    "python-dotenv>=1.0.1",
    "google-genai",
    "fastapi",
    "pydantic",
    "langgraph-api", 
    "langgraph-cli"  
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"
